third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/return_mutual_borrows.exp

Diagnostics:
error: mutable reference in local `s1` requires exclusive access
   ┌─ tests/reference-safety/v1-tests/return_mutual_borrows.move:11:22
   │
11 │         (freeze(s1), freeze(s1)) // error in v2 since &mut cannot be copied
   │         -------------^^^^^^^^^^-
   │         ││           │
   │         ││           requirement enforced here
   │         │previous call result
   │         conflicting reference `return[0]`used here
